--- a/main.css
+++ b/main.css
@@ -5,18 +5,19 @@ body{
     padding:0;
 }
 .cable{
-    margin:0;
-    padding:0;
-    width:100%;
-    display:block;
-    position:fixed;
-    bottom:0;
-    overflow:visible
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 200px;
+    display: block;
+    position: fixed;
+    bottom: 0;
 }
 .cable path{
     stroke:black;
     stroke-width:5px; 
     fill:none;
+    width:100%;
 }
 .sprites {
     position: absolute;
