--- a/main.css
+++ b/main.css
@@ -3,6 +3,31 @@ body{
     height:100%;
     margin:0;
     padding:0;
+    background:url(img/sky.jpg); 
+}
+ 
+.cloud {
+    position: absolute;
+    z-index: 0; 
+    animation: cloud 20s infinite forwards;
+    background: url(img/cloud.png);
+    height: 100vh;
+    width: 100%;
+    background-position: bottom left;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    top: 0; 
+}
+
+@keyframes cloud {
+    from{
+        left:-1000px;
+        opacity:0;
+    }
+    to{
+        left:100%;
+        opacity:1
+    }
 }
 
 .cable{
@@ -11,8 +36,8 @@ body{
     width: 100%;
     height: 200px;
     display: block;
-    position: fixed;
-    bottom: 0;
+    position: relative;
+    margin-top: 500px;
 }
 
 .cable path {
@@ -36,10 +61,10 @@ body{
 
 @keyframes cable1{
     to{ 
-        d: path('M0,80 C600,200 2000,0 2000,30')
+        d: path('M0,80 C600,200 2000,0 2000,30');
     }
     from{
-        d: path('M0,40 C600,250 2000,0 2000,30') 
+        d: path('M0,40 C600,250 2000,0 2000,30');
     }
 }
 
